--- a/DragonBallPractica/Presentation/Login/View/Login.storyboard
+++ b/DragonBallPractica/Presentation/Login/View/Login.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="Y6W-OH-hqX" customClass="LoginViewController" customModule="DragonBallPractica" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -83,6 +83,9 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="20"/>
                                     <color key="baseBackgroundColor" systemColor="systemOrangeColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapLoginButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="T1V-nQ-Peq"/>
+                                </connections>
                             </button>
                             <view hidden="YES" alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u1T-Ug-7tn">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
@@ -117,6 +120,13 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="u1T-Ug-7tn" secondAttribute="trailing" id="u3s-YX-wkf"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailErrorLabel" destination="S0N-bz-8uM" id="ee0-FP-pdt"/>
+                        <outlet property="emailTextField" destination="mQR-PT-weH" id="M1j-DO-dds"/>
+                        <outlet property="loadingView" destination="u1T-Ug-7tn" id="R1I-ge-Jnl"/>
+                        <outlet property="passwordErrorLabel" destination="ihI-sM-qkD" id="CJt-51-XVc"/>
+                        <outlet property="passwordTextField" destination="Lam-VI-Mn8" id="yQa-Ae-RE6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
