Add centerYFieldsStackViewConstraint connection from Login storyboard to  LoginViewController and handle it by keyboard notifications, and refactor LoginViewController

--- a/DragonBallPractica/Presentation/Login/View/Login.storyboard
+++ b/DragonBallPractica/Presentation/Login/View/Login.storyboard
@@ -121,6 +121,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="centerYFieldsStackViewConstraint" destination="KFm-mH-8oh" id="PLc-4x-CKJ"/>
                         <outlet property="emailErrorLabel" destination="S0N-bz-8uM" id="ee0-FP-pdt"/>
                         <outlet property="emailTextField" destination="mQR-PT-weH" id="M1j-DO-dds"/>
                         <outlet property="loadingView" destination="u1T-Ug-7tn" id="R1I-ge-Jnl"/>
