--- a/DragonBallPractica/Presentation/Login/View/Login.storyboard
+++ b/DragonBallPractica/Presentation/Login/View/Login.storyboard
@@ -23,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8sV-E7-hhA">
-                                <rect key="frame" x="16" y="346" width="361" height="160"/>
+                                <rect key="frame" x="16" y="349" width="361" height="154.33333333333337"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3tm-f0-x5K">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="80"/>
@@ -49,7 +49,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qpJ-ia-Ew2">
-                                        <rect key="frame" x="0.0" y="80" width="361" height="80"/>
+                                        <rect key="frame" x="0.0" y="80" width="361" height="74.333333333333314"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lam-VI-Mn8">
                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="60"/>
@@ -60,11 +60,8 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                             </textField>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihI-sM-qkD">
-                                                <rect key="frame" x="0.0" y="60" width="361" height="20"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="20" id="DjG-0r-1UC"/>
-                                                </constraints>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihI-sM-qkD">
+                                                <rect key="frame" x="0.0" y="60.000000000000007" width="361" height="14.333333333333336"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <color key="textColor" systemColor="systemPinkColor"/>
                                                 <nil key="highlightedColor"/>
@@ -74,7 +71,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dI8-yD-mwP">
-                                <rect key="frame" x="16" y="516" width="361" height="48"/>
+                                <rect key="frame" x="16" y="515.33333333333337" width="361" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="BEI-WY-iwo"/>
                                 </constraints>
@@ -110,7 +107,7 @@
                             <constraint firstItem="u1T-Ug-7tn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Mlc-lD-jDO"/>
                             <constraint firstItem="BPb-b1-wKb" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="NBm-k3-W9Q"/>
                             <constraint firstItem="u1T-Ug-7tn" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="PXC-cb-cc9"/>
-                            <constraint firstItem="dI8-yD-mwP" firstAttribute="top" secondItem="8sV-E7-hhA" secondAttribute="bottom" constant="10" id="Sv9-sH-STE"/>
+                            <constraint firstItem="dI8-yD-mwP" firstAttribute="top" secondItem="8sV-E7-hhA" secondAttribute="bottom" constant="12" id="Sv9-sH-STE"/>
                             <constraint firstItem="dI8-yD-mwP" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="16" id="VA9-ta-uz8"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BPb-b1-wKb" secondAttribute="trailing" constant="16" id="dPX-QQ-RXA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="u1T-Ug-7tn" secondAttribute="bottom" id="e4T-rp-O5G"/>
